# m0use

./: .gitignore  .goreleaser.yml  README.md  config.yml.template  go.mod  go.sum  logging.conf  m0use.py  m0use.service  m0use.timer  pyproject.toml
.github/workflows/: release.yml
cmd/m0use/: main.go
pkg/config/: cache.go  config.go  logger.go
pkg/ns/: client.go  nation.go  ns.go
src/: config.py  eurocore.py  ns.py
